@@ -132,7 +132,9 @@ MonoBehaviour:
     Type: 2
   - Config: Default
     Type: 1
-  TrackHandIndices: ffffffff0000000001000000
+  - Config: Default
+    Type: 0
+  TrackHandIndices: ffffffff0200000002000000
 --- !u!114 &836143163
 MonoBehaviour:
   m_ObjectHideFlags: 0
