@@ -9,6 +9,8 @@ TODO:
 
 2017.9.13	K.L.	<k.l.lambda@gmail.com>
 
+	+	Pianist/FingeringNavigator: added progress bar.
+
 	+	Pianist/FingeringNavigator: output result implemented.
 
 	+	Pianist/FingeringNavigator: getFingerChoices implemented.
